--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
 	<meta charset="UTF-8">
 	<title>Kamień, papier, nożyce</title>
 	<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="sass/style.scss">
 </head>
 <body>
+    <header class="welcome">
+        <div class="container">
+            <h1>Welcome to our game!</h1>
+            <h2>Kamień, Papier, Nożyce</h2>
+        </div>
+    </header>
+    <section class="instruction">
+        <div class="container">
+            <div id="rules">
+                <h2>Zasady:</h2>
+                <ul>
+                    <li>Kamień kruszy Nożyce</li>
+                    <li>Nożyce tną Papier</li>
+                    <li>Papier zakrywa Kamień</li>
+                </ul>
+            </div>
+    </section>
+    <section class="game">
 	<div class="container">
 		<div id="buttons">
             <button id="button-rock">Kamień</button>
@@ -14,6 +33,7 @@
         </div>
 		<div id="messages"></div>
 	</div>
+</section>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
 </body>
