Create section result

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Kamień, papier, nożyce</title>
 	<link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="sass/style.scss">
+    <link href="https://fonts.googleapis.com/css?family=Oswald|Quattrocento" rel="stylesheet">
 </head>
 <body>
     <header class="welcome">
@@ -33,6 +34,11 @@
         </div>
 		<div id="messages"></div>
 	</div>
+</section>
+<section class="saving-resaults">
+    <div class="container">
+        <div id="result"></div>
+    </div>
 </section>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
