Add some styles into button

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
             <button id="button-paper">Papier</button>
             <button id="button-scissors">Nożyce</button>   
         </div>
-		<div id="messages"></div>
+		<div id="messages" class="animated"></div>
 	</div>
 </section>
 <section class="saving-resaults">
     <div class="container">
-        <div id="result"></div>
+        <div id="result" class="animated"></div>
     </div>
 </section>
 	<script src="js/functions.js"></script>
