Add education section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 </ul>
             </div>
     </section>
+    <section class="educational">
+        <h2>Czy wiesz że?</h2>
+        <p>Gra kamień, papier, nożyce jest jedną z najstarszych znanych gier ruchowych. Jej pochodzenie można śledzić aż do Chin w czasach dynastii Han (206 p.n.e. - 220 n.e.). Później trafiła do Japonii, gdzie przyjęła nazwę "Jan-Ken".</p>
+        <p>W Europie gra zyskała popularność w XIX wieku pod nazwą "morra". Zasady różnią się trochę w różnych regionach świata, ale podstawowa idea pozostaje taka sama - każdy z trzech ruchów może pokonać inny, a jednocześnie zostać pokonanym przez inny.</p>
+      </section>
     <section class="game">
 	<div class="container">
 		<div id="buttons">
